<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tile">QuizApp</string>
    <string name="name">""</string>
    <string name="startLabel">START</string>
    <string name="quitLabel">QUIT</string>
    <string name="nextLabel">NEXT QUESTION</string>
    <string name="aboutLabel">ABOUT</string>
    <string name="enter_your_name">Enter your name</string>
</resources>