<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainFragment" android:textAlignment="center"
                                                   android:id="@+id/frameLayout">
    <TextView
            android:text="@string/tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" android:background="#00FFFFFF"
            android:textColor="#F44336" android:textSize="64sp"
            android:gravity="center_vertical|fill_vertical"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/quizName" android:gravity="start" android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textColor="#8F8F8F"
            android:hint="@string/enter_your_name"/>
    <Button
            android:text="@string/startLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/startButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/quizName" android:background="#FF6F00"
            android:textColor="#FFFFFF" android:textSize="30sp"/>
    <Button
            android:text="@string/aboutLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/aboutButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="132dp"
            app:layout_constraintTop_toBottomOf="@+id/quizName" android:background="#01579B"
            android:textColor="#FFFFFF" android:textSize="30sp" app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>