<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".QuizFragment" android:id="@+id/quizLayout">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameLabel"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="128dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="64dp" android:textSize="30sp"
            android:textColor="#004D40"/>
    <Button
            android:text="@string/quitLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/quitButton"
            android:textColor="#FFFFFF" android:background="#01579B"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp" android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"/>
    <Button
            android:text="@string/nextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/nextButton"
            android:textColor="#FFFFFF" android:background="#FF6F00"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/quitButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>